# corewar

./: .gitignore  README.md
libft/: Makefile
libft/includes/: char_ft.h  conv_ft.h  get_next_line.h  hashtable_ft.h  libft.h  lst_ft.h  math_ft.h  matrix_ft.h  memory_ft.h  put_ft.h  rb_trees_ft.h  sort_ft.h  str_ft.h  vec_ft.h
libft/srcs/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_tolower.c  ft_toupper.c
libft/srcs/conv/: ft_atoi.c  ft_ftoa.c  ft_itoa.c
libft/srcs/math/: ft_int_len.c  ft_isprime.c  ft_next_prime.c  ft_pow.c
libft/srcs/memory/: ft_bzero.c  ft_gc_helper.c  ft_mem_free.c  ft_mem_free_all.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/srcs/put/: ft_putchar.c  ft_putchar_fd.c  ft_putchar_fd_uni.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
libft/srcs/sort/: ft_insertion_sort.c  ft_swap.c  ft_swaps.c  quick_sort_by_name.c
libft/srcs/string/: ft_free_strarr.c  ft_makestr.c  ft_putnstr.c  ft_splitwsp.c  ft_str_upper.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  (+14 more)
virtual_machine/: CMakeLists.txt  Makefile
virtual_machine/includes/: constants.h  virtual_machine.h
virtual_machine/srcs/: error_handler.c  ft_timsort.c  init_players.c  main.c  parse_arguments.c  utils.c
(+50 files in other folders)
